# rustyRabbitEgs

./: .gitignore  README.md
1-hello_world/: README.md
1-hello_world/python/: common.py  receive.py  send.py
1-hello_world/rust/helloWorldRabbit/: Cargo.toml  README.md
1-hello_world/rust/helloWorldRabbit/src/: lib.rs
2-work_queues/: README.md
2-work_queues/python/: common.py  new_task.py  worker.py
2-work_queues/rust/workQueues/: Cargo.toml  example.sh
2-work_queues/rust/workQueues/src/: lib.rs
3-pubsub/: README.md
3-pubsub/python/: common.py  emit_log.py  example_emit.sh  receive_logs.py
3-pubsub/rust/pubsub/: Cargo.toml  example.sh
3-pubsub/rust/pubsub/src/: lib.rs
4-routing/: README.md
4-routing/python/: common.py  emit_log_level.py  receive_logs.py
4-routing/rust/routing/: Cargo.toml  example.sh
4-routing/rust/routing/src/: lib.rs
5-topics/: README.md
5-topics/python/: common.py  emit_log.py  example_emit.sh  receive_logs.py
5-topics/rust/topic/: Cargo.toml  example.sh
5-topics/rust/topic/src/: binding_key.rs  lib.rs  loc_loglevel.rs  location.rs  loglevel.rs  routing_key.rs
6-rpc/: README.md
6-rpc/python/: common.py  emit_request.py  example_emit.sh  rpc_server.py
6-rpc/rust/rpc/: Cargo.toml
6-rpc/rust/rpc/src/: constants.rs  fib.rs  lib.rs  log_level.rs  rpc_client.rs  rpc_server.rs
