[package]
name = "routing"
version = "0.1.0"
authors = ["Jonathan Gerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "emit-log"
path = "src/emit/bin/emit_log.rs"

[[bin]]
name = "receive-logs"
path = "src/receive/bin/receive_logs.rs"


[dependencies]
lapin = "1.4.2"
env_logger = "0.8.1"
logger = "0.4.0"
futures-executor = "0.3.7"
futures-util = "0.3.7"
log = "0.4.11"
#futures-lite = "1.11.2"
tracing = "0.1.21"
#async-global-executor = "1.4.2"
tracing-subscriber = "0.2.14"
async-std = {version = "1.6.5", features= ["attributes"]}
async-lapin = "0.4.1"
async-amqp = "0.1.8"
structopt = "0.3.20"
strum = {version = "0.19.5", features=["derive"]}
anyhow = "1.0.33"
#strum_macros = "0.19.4"
