[package]
name = "rpc"
version = "0.4.0"
authors = ["Jonathan Gerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rpc-server"
path = "src/bin/server.rs"

[[bin]]
name = "rpc-client"
path = "src/bin/client.rs"


[dependencies]
lapin = "1.4.2"
logger = "0.4.0"
tracing = "0.1.21"
tracing-subscriber = "0.2.14"
async-std = { version = "1.6.5", features= ["attributes"] }
structopt = "0.3.20"
uuid = { version = "0.8.1", features = ["v4"] }
anyhow = "1.0.33"
strum = { version = "0.19.5", features = ["derive"] }
